kubernetes/deployment.yaml
apiVersion: apps/v1  # API version
kind: Deployment
metadata:
  name: fola3-server # Unique name for the deployment
  labels:
    app: fola3-server       # Labels to be applied to this deployment
spec:
  selector:
    matchLabels:     # This deployment applies to the Pods matching these labels
      app: fola3-server
  replicas: 1        # Run a single pod in the deployment
  template:          # Template for the pods that will be created by this deployment
    metadata:
      labels:        # Labels to be applied to the Pods in this deployment
        app: fola3-server
    spec:            # Spec for the container which will be run inside the Pod.
      imagePullSecrets:
      - name: gitlab-soulan
      containers:
      - name: server
        image: registry.gitlab.soulan.de/kano-surveyer/server
        resources:
          requests:
            cpu: 100m
            memory: 300Mi
        ports:
        - containerPort: 3000
