kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fola3-server
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - api.fola3.elvir.dev
    secretName: fola3-server-tls
  rules:
  - host: "api.fola3.elvir.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fola3-server
            port:
              number: 3000
